<resources>
    <string name="app_name">projet_novigrad</string>
    <string name="prompt_email" />
    <string name="prompt_password" />
    <string name="action_sign_in_short" />
    <string name="Novigrad" />
    <string name="action_register" />
    <string name="prompt_password2" />
    <string name="empcode" />
    <string name="emp" />
    <string name="employeeBox" />
    <string name="NormalUserBox" />
    <string name="RegistrationMessage" />
    <string name="repeat_password">Repeat password</string>
    <string name="type_your_employee_code_here">Type your employee code here</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="novigrad">Novigrad</string>
    <string name="fill_out_the_section_below_if_you_are_an_employee">Fill out the section below if you are an employee</string>
    <string name="register">register</string>
    <string name="employeebox">employeeBox</string>
    <string name="normaluserbox">NormalUserBox</string>
    <string name="what_do_you_wish_to_register_as">What do you wish to register as ?</string>
    <string name="email">email</string>
    <string name="pass">password</string>
    <string name="sign_in">sign in</string>
    <string name="novi">Novigrad</string>
    <string name="register2">register</string>
    <string name="add_service">add service</string>
    <string name="service_name">Service name</string>
    <string name="add_document">Add a required document</string>
    <string name="add_service_title">Add Service</string>
    <string name="service_wage">Service wage</string>
    <string name="add_info">Add a required field</string>
    <string name="delete">Delete</string>
    <string name="clear">Clear all</string>
    <string name="edit_service">Edit Service</string>
    <string name="current_service_name">Current service name</string>
    <string name="new_service_name">New service name</string>
    <string name="new_service_wage">New service wage</string>
    <string name="delete_service">Delete Service</string>
</resources>