<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Registration"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03A9F4"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">


    <TextView
        android:id="@+id/Novigrad"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="50dp"
        android:layout_weight="1"
        android:background="#002196F3"
        android:gravity="center"
        android:lineSpacingExtra="12sp"
        android:shadowColor="#03C11A1A"
        android:text="@string/novigrad"
        android:textColor="#0931C1"
        android:textSize="36sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <EditText
        android:id="@+id/user"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="236dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textColor="#0931C1"
        android:textStyle="bold" />

    <EditText
        android:layout_width="339dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="291dp"
        android:hint="@string/username"
        android:selectAllOnFocus="true"
        android:textColor="#0931C1"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/password"
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="346dp"
        android:autofillHints=""
        android:hint="@string/password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColor="#0931C1"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/repeat_password"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="28dp"
        android:autofillHints=""
        android:hint="@string/repeat_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColor="#0931C1"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/EmployeeCode"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="456dp"
        android:autofillHints=""
        android:hint="@string/type_your_employee_code_here"
        android:inputType="numberPassword"
        android:selectAllOnFocus="true"
        android:textColor="#0931C1"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/error"
        android:layout_width="201dp"
        android:layout_height="127dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="328dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="367dp" />


    <Button

        android:id="@+id/register_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="143dp"
        android:layout_marginBottom="45dp"
        android:text="@string/register" />

    <RadioGroup
        android:id="@+id/groupBox"
        android:layout_width="313dp"
        android:layout_height="98dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="114dp">

        <RadioButton
            android:id="@+id/clientBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Client"
            android:textColor="#0931C1"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/empBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Employee"
            android:textColor="#0931C1"
            android:textStyle="bold" />
    </RadioGroup>

</RelativeLayout>