<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03A9F4"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">


    <EditText
        android:id="@+id/username"
        android:layout_width="273dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="160dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textColor="#0931C1"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/password"
        android:layout_width="279dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="69dp"
        android:layout_marginTop="233dp"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColor="#0931C1"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Novigrad"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="50dp"
        android:layout_weight="1"
        android:background="#002196F3"
        android:gravity="center"
        android:lineSpacingExtra="12sp"
        android:shadowColor="#03C11A1A"
        android:text="@string/novi"
        android:textColor="#0931C1"
        android:textSize="36sp"
        android:textStyle="normal"
        />

    <TextView
        android:id="@+id/errorMessageLogin"
        android:layout_width="216dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="327dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="96dp"
        android:text="SIGN IN"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="166dp"
        tools:layout_editor_absoluteY="456dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="REGISTER" />

    <RadioGroup
        android:id="@+id/groupBox"
        android:layout_width="317dp"
        android:layout_height="114dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="51dp"
        android:layout_marginBottom="171dp">

        <RadioButton
            android:id="@+id/clientBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Client"
            android:textColor="#0931C1"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/empBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Employee"
            android:textColor="#0931C1"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/Admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Admin"
            android:textColor="#0931C1"
            android:textStyle="bold" />
    </RadioGroup>

</RelativeLayout>